--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,25 @@
 # Qt generated files #
 ######################
 *.pro.user
+moc_*.h
+moc_*.cpp
+ui_*.h
+ui_*.cpp
+qrc_*.h
+qrc_*.cpp
+.qmake.stash
+*.autosave
 
 # 3rd party files #
 ###################
 App/Resources/rc
+html
+latex
+
+# Build files #
+###############
+Makefile
+*.o
+*.a
+*.dylib
+*.app
